added queue deletion

--- a/web/analytics/src/App.css
+++ b/web/analytics/src/App.css
@@ -218,3 +218,17 @@ h2 {
 .logout-button:hover {
   background-color: #ef5350;
 }
+
+.delete-button {
+  padding: 5px 10px;
+  background-color: #e57373;
+  color: var(--bg-color);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: #ef5350;
+}
